# git-dig

./: .gitignore  README.md  git_dig.py  pyproject.toml
examples/: simple.tar
