[tool.poetry]
name = "git-dig"
version = "0.1.0"
description = "Explore git source dependencies from current commit"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "git_dig"}]
homepage = "https://github.com/ganwell/git-dig"
repository = "https://github.com/ganwell/git-dig"
keywords = ["git", "dependencies", "incremental"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
git-darcs = 'git_dig:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
pdbpp = "^0.10.3"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-debugger = "^4.1.2"
flake8-isort = "^5.0.3"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
